fixed text-align for dialog header

--- a/app/assets/stylesheets/partials/common.sass
+++ b/app/assets/stylesheets/partials/common.sass
@@ -57,6 +57,7 @@ dialog.mdl-dialog
 			h2
 				margin: 0
 				width: 70%
+				text-align: center
 		.dialog-component, .mdl-dialog__content
 			background-color: #FFFFFF
 			margin: 24px 0
